Update 'd5iq7tnem-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:1906f2311efa74f9cc44acbe73ac326d440aef87@sha256:fc05a67ee31ef2435cc392a559d83a36f8bd8eb47f9a968d0ed5798e1ae724d2

--- a/components/d5iq7tnem-go/overlays/development/deployment-patch.yaml
+++ b/components/d5iq7tnem-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: d5iq7tnem-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:1906f2311efa74f9cc44acbe73ac326d440aef87@sha256:fc05a67ee31ef2435cc392a559d83a36f8bd8eb47f9a968d0ed5798e1ae724d2
+          name: container-image
